--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hieu Nguyen - Full Stack Developer</title>
+		<title>Hieu Nguyen</title>
 		<meta
 			name="description"
 			content="Full Stack Developer specializing in React, Node.js, and modern web technologies. View my portfolio and projects."
